--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.3.3",
     "sass": "^1.55.0",
     "scss": "^0.2.4",
+    "tsparticles": "^2.3.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
